--- a/Reactor.OxygenFilter.MSBuild/Reactor.OxygenFilter.MSBuild.TargetFramework.props
+++ b/Reactor.OxygenFilter.MSBuild/Reactor.OxygenFilter.MSBuild.TargetFramework.props
@@ -12,6 +12,11 @@
     <UsingTask TaskName="Reobfuscate" AssemblyFile="$(TaskAssembly)" />
     <UsingTask TaskName="Deobfuscate" AssemblyFile="$(TaskAssembly)" />
 
+    <Target Name="WarnAboutTargetFramework" BeforeTargets="PrepareForBuild" Condition=" '$(TargetFramework)' != 'netstandard2.1' ">
+        <!-- TODO link to docs explaining why netstandard is better -->
+        <Warning Text="Your project is not targetting netstandard2.1, you probably want to change that." File="$(MSBuildProjectFullPath)" />
+    </Target>
+
     <Target Name="LoadMappings">
         <LoadMappings TargetGamePlatform="$(TargetGamePlatform)" Mappings="$(Mappings)">
             <Output TaskParameter="MappingsJson" PropertyName="MappingsJson" />
@@ -43,6 +48,6 @@
     </Target>
 
     <Target Name="Reobfuscate" AfterTargets="Build">
-        <Reobfuscate Input="$(ProjectDir)$(OutputPath)$(AssemblyName).dll" ReferencedAssemblies="@(ReferencePath)" />
+        <Reobfuscate AmongUs="$(AmongUs)" Input="$(ProjectDir)$(OutputPath)$(AssemblyName).dll" ReferencedAssemblies="@(ReferencePath)" />
     </Target>
 </Project>
