--- a/Reactor.Greenhouse/Reactor.Greenhouse.csproj
+++ b/Reactor.Greenhouse/Reactor.Greenhouse.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="AngleSharp" Version="0.14.0" />
         <PackageReference Include="DepotDownloader.Library" Version="0.1.2" />
         <PackageReference Include="Iced" Version="1.10.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
         <PackageReference Include="Mono.Cecil" Version="0.11.3" />
         <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
         <ProjectReference Include="..\Reactor.OxygenFilter\Reactor.OxygenFilter.csproj" />
