--- a/Reactor.OxygenFilter.MSBuild/Reactor.OxygenFilter.MSBuild.TargetFramework.props
+++ b/Reactor.OxygenFilter.MSBuild/Reactor.OxygenFilter.MSBuild.TargetFramework.props
@@ -18,13 +18,11 @@
     </Target>
 
     <Target Name="LoadMappings">
-        <LoadMappings GameVersion="$(GameVersion)" Mappings="$(Mappings)">
-            <Output TaskParameter="MappingsJson" PropertyName="MappingsJson" />
-        </LoadMappings>
+        <LoadMappings GameVersion="$(GameVersion)" Mappings="$(Mappings)" />
     </Target>
 
     <Target Name="GenerateReferences" BeforeTargets="PrepareForBuild" DependsOnTargets="LoadMappings">
-        <GenerateReferences AmongUs="$(AmongUs)" Mappings="$(MappingsJson)">
+        <GenerateReferences AmongUs="$(AmongUs)">
             <Output TaskParameter="ReferencesPath" PropertyName="ReferencesPath" />
         </GenerateReferences>
 
@@ -38,7 +36,7 @@
     </Target>
 
     <Target Name="Deobfuscate" AfterTargets="GenerateReferences">
-        <Deobfuscate AmongUs="$(AmongUs)" Input="@(Deobfuscate)" Mappings="$(MappingsJson)">
+        <Deobfuscate AmongUs="$(AmongUs)" Input="@(Deobfuscate)">
             <Output TaskParameter="Deobfuscated" PropertyName="Deobfuscated" />
         </Deobfuscate>
 
@@ -48,6 +46,6 @@
     </Target>
 
     <Target Name="Reobfuscate" AfterTargets="Build">
-        <Reobfuscate GameVersion="$(GameVersion)" AmongUs="$(AmongUs)" Input="$(ProjectDir)$(OutputPath)$(AssemblyName).dll" ReferencedAssemblies="@(ReferencePath)" />
+        <Reobfuscate AmongUs="$(AmongUs)" Input="$(ProjectDir)$(OutputPath)$(AssemblyName).dll" ReferencedAssemblies="@(ReferencePath)" />
     </Target>
 </Project>
