--- a/Reactor.OxygenFilter/Reactor.OxygenFilter.csproj
+++ b/Reactor.OxygenFilter/Reactor.OxygenFilter.csproj
@@ -3,15 +3,16 @@
         <TargetFrameworks>net472;netstandard2.0</TargetFrameworks>
         <LangVersion>latest</LangVersion>
 
-        <Version>0.1.1</Version>
+        <Version>0.1.2</Version>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/NuclearPowered/Reactor.OxygenFilter</RepositoryUrl>
         <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
         <Description>Library for deobfuscating Among Us</Description>
     </PropertyGroup>
-    
+
     <ItemGroup>
         <PackageReference Include="Mono.Cecil" Version="0.11.3" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
     </ItemGroup>
 </Project>
