--- a/Reactor.Greenhouse/Reactor.Greenhouse.csproj
+++ b/Reactor.Greenhouse/Reactor.Greenhouse.csproj
@@ -13,6 +13,6 @@
         <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
         <PackageReference Include="Mono.Cecil" Version="0.11.3" />
         <ProjectReference Include="..\Reactor.OxygenFilter\Reactor.OxygenFilter.csproj" />
-        <PackageReference Include="js6pak.Il2CppDumper" Version="6.4.20" />
+        <PackageReference Include="Il2CppDumper" Version="6.5.3" />
     </ItemGroup>
 </Project>
