--- a/Reactor.OxygenFilter.MSBuild/Reactor.OxygenFilter.MSBuild.csproj
+++ b/Reactor.OxygenFilter.MSBuild/Reactor.OxygenFilter.MSBuild.csproj
@@ -4,7 +4,7 @@
         <LangVersion>latest</LangVersion>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 
-        <Version>0.2.10</Version>
+        <Version>0.3.0</Version>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/NuclearPowered/Reactor.OxygenFilter</RepositoryUrl>
         <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
@@ -21,8 +21,8 @@
         <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.8.0" />
 
         <ProjectReference Include="..\Reactor.OxygenFilter\Reactor.OxygenFilter.csproj" />
-        <PackageReference Include="js6pak.Il2CppDumper" Version="6.4.20" />
-        <PackageReference Include="NuclearPowered.AssemblyUnhollower" Version="0.4.13" />
+        <PackageReference Include="Il2CppDumper" Version="6.5.4" />
+        <PackageReference Include="NuclearPowered.AssemblyUnhollower" Version="0.4.15" />
     </ItemGroup>
 
     <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
